--- a/index.html
+++ b/index.html
@@ -1,4 +1,24 @@
 <!DOCTYPE html>
 <head>
     <script src="./script.js"></script>
+    <link rel="stylesheet" href="./style.css">
 </head>
+<body>
+    <div class="header">
+        <h2>Weather</h2>
+    </div>
+    <div class="row">
+        <div class="column right">
+            <textarea name="right" id="t1" cols="30" rows="10"></textarea>
+        </div>
+        <div class="column center">
+            <textarea name="center" id="t2" cols="30" rows="10"></textarea>
+        </div>
+        <div class="column left">
+            
+        </div>
+    </div>
+    <div class="footer">
+        <p>Made by @Jenssile</p>
+    </div>
+</body>
