added some small stuff

--- a/index.html
+++ b/index.html
@@ -9,13 +9,16 @@
     </div>
     <div class="row">
         <div class="column right">
+            <h3>Viborg:</h3>
             <textarea name="right" id="t1" cols="30" rows="10"></textarea>
         </div>
         <div class="column center">
+            <h3>Newcastle:</h3>
             <textarea name="center" id="t2" cols="30" rows="10"></textarea>
         </div>
         <div class="column left">
-            
+            <h3>Manchester:</h3>
+            <textarea name="left" id="t3" cols="30" rows="10"></textarea>
         </div>
     </div>
     <div class="footer">
