--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
         <h2>Weather</h2>
     </div>
     <div class="row">
-        <div class="column right">
+        <div class="column right" id="d1">
             <h3>Viborg:</h3>
             <textarea name="right" id="t1" cols="30" rows="10"></textarea>
         </div>
-        <div class="column center">
+        <div class="column center" id="d2">
             <h3>Newcastle:</h3>
             <textarea name="center" id="t2" cols="30" rows="10"></textarea>
         </div>
-        <div class="column left">
+        <div class="column left" id="d3">
             <h3>Manchester:</h3>
             <textarea name="left" id="t3" cols="30" rows="10"></textarea>
         </div>
