--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
         <h2>Weather</h2>
     </div>
     <div class="row">
-        <div class="column right" id="d1">
-            <h3>Viborg:</h3>
-            <textarea name="right" id="t1" cols="30" rows="10"></textarea>
-        </div>
-        <div class="column center" id="d2">
-            <h3>Newcastle:</h3>
-            <textarea name="center" id="t2" cols="30" rows="10"></textarea>
-        </div>
-        <div class="column left" id="d3">
-            <h3>Manchester:</h3>
-            <textarea name="left" id="t3" cols="30" rows="10"></textarea>
+        <div class="card template">
+            <img src="http://openweathermap.org/img/wn/10d@4x.png">
+            <div class="container">
+                <h4 class="name"><b>test</b></h4>
+                <p class="temp">18</p>
+                <p class="dec">more test</p>
+                <p class="humidity">23</p>
+                <p class="timezone">UTC 3600</p>
+                <p class="sunrise">7:24:08</p>
+                <p class="sunset">20:52:03</p>
+            </div>
         </div>
     </div>
     <div class="footer">
