for working on at home

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <div class="row">
         <div class="column left">
             <a href="https://www.linkedin.com/in/jens-eric-bouwens/" class="fa fa-linkedin" target="_blank"></a>
+            <button class="pritybutton" type="button" id="about">Show about</button>
+            <button class="pritybutton" type="button" id="skillbars">Show skillbar's</button>
         </div>
         <div class="column middle">
             <div class="bar template">
@@ -20,6 +22,12 @@
                 <div class="barBG">
                     <div class="proficiency">90%</div>
                 </div>
+            </div>
+            <div class="about hidden">
+                <h2>About me:</h2>
+                <p class="bodytext"></p>
+                <br>
+                <p class="bodytext2"></p>
             </div>
         </div>
         <div class="column right">
